Add repo links & fix formatting

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -114,26 +114,34 @@ the project is in the early stages of development, [over 35
 NIPs](https://github.com/rust-nostr/nostr/tree/master/crates/nostr#supported-nips)
 are already supported, with more to come.
 
-Repository: [nostr-sdk/nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios)
+Repository: [nostr-sdk/nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios)  
 License: MIT
 
-### Nostr Relay NestJS: [https://github.com/CodyTseng/nostr-relay-nestjs](https://github.com/CodyTseng/nostr-relay-nestjs)
+### Nostr Relay NestJS
 
 Nostr-relay-nestjs is a Nostr relay with a clear structure that is easy to
 customize to your needs. This relay implementation is based on the NestJS
 framework and focuses on reliability and high test coverage.
 
-Repository: 
+Repository: [CodyTseng/nostr-relay-nestjs](https://github.com/CodyTseng/nostr-relay-nestjs)  
 License: MIT
 
-### Soapbox: [https://gitlab.com/soapbox-pub](https://gitlab.com/soapbox-pub)
+### Soapbox: 
 
-[Soapbox](https://soapbox.pub/) is an open-source software suite that makes decentralized social media accessible to everyone through a focus on design, user experience, and the growth of the network. Soapbox started out as an alternative to Mastodon but has grown to encompass ActivityPub and nostr while being interoperable with both. In February 2023, the team launched the "Mostr" bridge, seamlessly connecting Nostr to the ActivityPub Fediverse and enabling bidirectional communication between both protocols. This bridge exposes over 9.4M potential users in Nostr's target audience to Nostr, many of whom have already left the Fediverse completely in favor of Nostr.
+[Soapbox](https://soapbox.pub/) is an open-source software suite that makes
+decentralized social media accessible to everyone through a focus on design,
+user experience, and the growth of the network. Soapbox started out as an
+alternative to Mastodon but has grown to encompass ActivityPub and nostr while
+being interoperable with both. In February 2023, the team launched the "Mostr"
+bridge, seamlessly connecting Nostr to the ActivityPub Fediverse and enabling
+bidirectional communication between both protocols. This bridge exposes over
+9.4M potential users in Nostr's target audience to Nostr, many of whom have
+already left the Fediverse completely in favor of Nostr.
 
-Repository: 
+Repository: [gitlab.com/soapbox-pub](https://gitlab.com/soapbox-pub)  
 License: GNU Affero General Public License v3.0
 
-### Nozzle: [https://github.com/dluvian/Nozzle](https://github.com/dluvian/Nozzle)
+### Nozzle
 
 Nozzle is a lean and lightweight Nostr client for Android. The goal is to have a
 great mobile client on low-performance devices. Further, Nozzle aims to make
@@ -143,10 +151,10 @@ for. This reduces the load on relay operators, lowers users' mobile data usage,
 and promotes the utilization of smaller relays instead of only interacting with
 a few big (and centralizing) ones.
 
-Repository: 
+Repository: [dluvian/Nozzle](https://github.com/dluvian/Nozzle)  
 License: MIT
 
-### Code Collaboration over Nostr: [https://github.com/DanConwayDev/ngit-cli](https://github.com/DanConwayDev/ngit-cli)
+### Code Collaboration over Nostr
 
 This project is a proof-of-concept for a much-needed, often discussed, and
 permissionless, nostr-based GitHub alternative. The goal is to replace the
@@ -157,19 +165,19 @@ managed through groups so that multiple maintainers can manage a repository.
 This model reduces the barriers for clients to support repository collaboration
 and allows for interoperability between repository management tools.
 
-Repository: 
+Repository: [DanConwayDev/ngit-cli](https://github.com/DanConwayDev/ngit-cli)  
 License: MIT
 
-### Satellite: [https://github.com/lovvtide/satellite-web](https://github.com/lovvtide/satellite-web)
+### Satellite
 
 [satellite.earth](https://satellite.earth/) is a web client for nostr that has a
 community focus and presents conversations as threaded comments, borrowing from
 the traditional Reddit interface.
 
-Repository: 
+Repository: [lovvtide/satellite-web](https://github.com/lovvtide/satellite-web)  
 License: MIT
 
-### Amethyst: [https://github.com/vitorpamplona/amethyst/](https://github.com/vitorpamplona/amethyst/)
+### Amethyst
 
 Amethyst is one of the most popular nostr clients for Android. Amethyst comes
 with expected features such as account management, feeds, profiles, and direct
@@ -180,10 +188,10 @@ follow hashtags, and other novel features. You can install
 [F-Droid](https://f-droid.org/packages/com.vitorpamplona.amethyst/) or [Google
 Play](https://play.google.com/store/apps/details?id=com.vitorpamplona.amethyst).
 
-Repository: 
+Repository: [vitorpamplona/amethyst/](https://github.com/vitorpamplona/amethyst/)  
 License: MIT
 
-### Pinstr: [https://github.com/sepehr-safari/pinstr](https://github.com/sepehr-safari/pinstr)
+### Pinstr
 
 [Pinstr](https://pinstr.app/) allows users to easily organize and discover new
 ideas by creating public boards full of pins. Users can star, comment, and zap
@@ -191,20 +199,20 @@ other users' boards. Users can find curated boards of other users or create
 boards themselves. Default boards include other users' bookmarked content, among
 other things.
 
-Repository: 
+Repository: [sepehr-safari/pinstr](https://github.com/sepehr-safari/pinstr)  
 License: MIT
 
-### nostr.build: [https://github.com/nostrbuild/nostr.build](https://github.com/nostrbuild/nostr.build)
+### nostr.build
 
 [Nostr.build](https://nostr.build/) is a free-to-use media hosting service that
 allows users to upload images, gifs, videos, and audio to share them as nostr
 events. The team recently released their code under an MIT License so that
 anyone might use the software to offer a similar service.
 
-Repository: 
+Repository: [nostrbuild/nostr.build](https://github.com/nostrbuild/nostr.build)  
 License: MIT
 
-### Gossip: [https://github.com/mikedilger/gossip](https://github.com/mikedilger/gossip)
+### Gossip
 
 Gossip is a fast and stable desktop nostr client focused on the Twitter-like
 micro-blogging aspect of nostr. Gossip follows people by downloading their
@@ -216,7 +224,7 @@ some. The client is packaged and
 [released](https://github.com/mikedilger/gossip/releases) for Linux, Windows,
 and MacOS.
 
-Repository: 
+Repository: [mikedilger/gossip](https://github.com/mikedilger/gossip)  
 License: MIT
 
 ### Nostr Design
