--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -126,7 +126,7 @@ framework and focuses on reliability and high test coverage.
 Repository: [CodyTseng/nostr-relay-nestjs](https://github.com/CodyTseng/nostr-relay-nestjs)  
 License: MIT
 
-### Soapbox: 
+### Soapbox
 
 [Soapbox](https://soapbox.pub/) is an open-source software suite that makes
 decentralized social media accessible to everyone through a focus on design,
