Reword tx cost FAQ, add "reach out" line

--- a/data/pages/faq.mdx
+++ b/data/pages/faq.mdx
@@ -35,10 +35,13 @@ recommendations but will retain sole discretion as to how funds are distributed.
 
 ## How much of my donation goes towards individuals and projects supported by Open Sats?
 
-All donations to the general fund and specific, mission-aligned FOSS
-projects are 100% passed through to Open Sats grant recipients. We try our best
-to find donor matching partners to ensure that no transaction fees are withheld
-regardless of payment method (thanks to our generous donors).
+All donations to the general fund and specific, mission-aligned FOSS projects
+are 100% passed through to Open Sats grant recipients. We try our best to find
+donor matching partners that cover the transaction fees that incur with each
+donation, regardless of payment method. Please [reach out] if you want to help
+us cover these costs.
+
+[reach out]: mailto:support@opensats.org
 
 ## Do you distribute grants in bitcoin or fiat?
 
