--- a/data/pages/mission.mdx
+++ b/data/pages/mission.mdx
@@ -13,7 +13,7 @@ flourish.
 We believe that free and open-source software is essential to the future of the
 internet and the world. It allows people to collaborate and share knowledge,
 without being locked into proprietary software or hardware. This is particularly
-important for bitcoin, which is a sound and digital money that relies on the
+important for bitcoin, which is a sound and electronic money that relies on the
 open-source development community to maintain and improve its software.
 
 OpenSats provides funding for a variety of bitcoin-related projects, including:
