Add descriptions & remove TODOs

--- a/data/pages/apply-website.mdx
+++ b/data/pages/apply-website.mdx
@@ -1,6 +1,6 @@
 ---
 title: Apply to OpenSats
-summary: "TODO"
+summary: "Apply to one of OpenSats' grant programs"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
