Re-word opening paragraph

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -4,15 +4,15 @@ date: '2023-07-08'
 tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['dergigi']
-summary: "OpenSats is funding 15+ open-source projects in the nostr ecosystem"
+summary: "OpenSats is funding over a dozen open-source projects in the nostr ecosystem"
 ---
 
 The [mission] of OpenSats is to support and maintain a sustainable ecosystem of
-funding for free and open-source projects which help Bitcoin flourish. Nostr is
-such a project, which is why OpenSats introduced The Nostr Fund
-and [built a team around the protocols originator][startsmall] to help support the builders
-that are trying to do open, interoperable, and censorship-resistant social media
-right.
+funding for free and open-source projects that help Bitcoin flourish. Nostr is
+such a project, which is why OpenSats introduced The Nostr Fund and [built a
+team around the protocols originator][startsmall] to help fund the growing nostr
+ecosystem.  As an open, interoperable, and censorship-resistant protocol, nostr
+has the chance of doing social-native networking right.
 
 After weeks of sorting through applications, we are excited to announce the
 first round of grants from [The Nostr Fund][nostr-fund].  OpenSats is proud to
