--- a/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
+++ b/data/blog/ announcing-lts-grant-program-to-support-bitcoin-core-contributors.mdx
@@ -4,7 +4,7 @@ date: '2023-07-07'
 tags: ['OpenSats', 'grants', 'bitcoin', 'LTS']
 draft: false
 authors: ['dergigi']
-summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people"
+summary: "OpenSats is launching long-term grants to support Bitcoin Core contributors and similar load-bearing internet people."
 ---
 
 OpenSats is pleased to announce a new long-term support (LTS) program for
