Add period to summary

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -4,7 +4,7 @@ date: '2023-07-08'
 tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['dergigi']
-summary: "OpenSats is funding over a dozen open-source projects in the nostr ecosystem"
+summary: "OpenSats is funding over a dozen open-source projects in the nostr ecosystem."
 ---
 
 The [mission] of OpenSats is to support and maintain a sustainable ecosystem of
