Better final paragraph(s)

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -230,14 +230,18 @@ License: Public Domain, Creative Commons
 
 ---
 
-To all the projects that applied and didn't get funded this time around: please
-don't be discouraged and feel free to apply again in the future. We will
+We have received hundreds of applications in the last couple of weeks, many
+related to or exclusively focused on nostr.
+
+To all the projects that applied and didn't make the cut this time around: don't
+be discouraged. Please [apply for funding][apply] again in the future. We will
 announce new grants and funding opportunities quarterly, and there is always the
 possibility of being listed on the OpenSats website to receive pass-through
-donations for your project.
+donations for your project.  
 
-If you are working on an open-source project related to bitcoin or nostr,
-[please apply](https://os-website-adp4mr4iw-open-sats.vercel.app/apply).
+We are excited to support the projects above in building the tools we bitcoiners
+care so deeply about. The future is bright; we just have a lot of building to
+do.
 
 [apply]: /apply
 [nostr-fund]: /projects/nostr
