Call to action: donate

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -38,7 +38,12 @@ In no particular order, here they are:
   - Nostr Design by [@karnage](http://nostr.com/npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac)
 
   
-Let's take a closer look at each of these projects after the fold.
+
+The projects above have received grants of various durations and sizes, and we
+have more nostr-related applications in the pipeline. [Donate to The Nostr
+Fund][nostr-fund] if you want to help fund the nostr ecosystem.
+
+Without further ado, let's take a closer look at each project in turn.
 
 ---
 
