Add images array to nostr post

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -4,6 +4,7 @@ date: '2023-07-08'
 tags: ['OpenSats', 'grants', 'nostr']
 draft: false
 authors: ['dergigi']
+images: ['https://nostr-resources.com/assets/css/bg.jpg']
 summary: "OpenSats is funding over a dozen open-source projects in the nostr ecosystem."
 ---
 
