Foreshadow bitcoin grant announcement

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -237,12 +237,14 @@ License: Public Domain, Creative Commons
 ---
 
 We have received hundreds of applications in the last couple of weeks, many
-related to or exclusively focused on nostr.
+related to or exclusively focused on nostr. Most applications focus on bitcoin
+and lightning, and we will announce grants for these projects soon.
 
-To all the projects that applied and didn't make the cut this time around: don't
-be discouraged. Please [apply for funding][apply] again in the future. We will
-announce new grants and funding opportunities quarterly, and there is always the
-possibility of being listed on the OpenSats website to receive pass-through
+To all the nostr projects that applied and didn't make the cut this time around:
+don't be discouraged. Please [apply for funding][apply] again in the future. We
+will announce new grants and funding opportunities quarterly, and there is
+always the possibility of being listed on the OpenSats website to receive
+pass-through
 donations for your project.  
 
 We are excited to support the projects above in building the tools we bitcoiners
