--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -36,6 +36,7 @@ In no particular order, here they are:
   - Pinstr by [@sepehr-safari](https://nostr.com/npub18c556t7n8xa3df2q82rwxejfglw5przds7sqvefylzjh8tjne28qld0we7)
   - nostr.build by [@nostr.build](https://nostr.com/npub1nxy4qpqnld6kmpphjykvx2lqwvxmuxluddwjamm4nc29ds3elyzsm5avr7)
   - Gossip by [@mikedilger](https://nostr.com/npub1acg6thl5psv62405rljzkj8spesceyfz2c32udakc2ak0dmvfeyse9p35c)
+  - Nostr SDK iOS by [@bryanmontz](http://nostr.com/npub1lua3283nqq0jqy3akatp8tgu5rmsyu0yhpp2rramtxp82mdu7svq2y8wt8)
   - Nostr Design by [@karnage](http://nostr.com/npub1r0rs5q2gk0e3dk3nlc7gnu378ec6cnlenqp8a3cjhyzu6f8k5sgs4sq9ac)
 
   
@@ -217,6 +218,18 @@ some. The client is packaged and
 and MacOS.
 
 Repository: [mikedilger/gossip](https://github.com/mikedilger/gossip)  
+License: MIT
+
+### Nostr SDK iOS
+
+The nostr SDK for iOS is a native Swift library that will enable developers to
+quickly and easily build nostr-based apps for Apple devices. The library plans
+to implement all approved NIPs and will follow Apple's API patterns, so that iOS
+developers feel comfortable using it from the start. The SDK aims to be simple
+in its public interface, abstracting away as much complexity as possible so that
+developers can focus on what makes their specific application unique.
+
+Repository: [nostr-sdk/nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios)
 License: MIT
 
 ### Nostr Design
