Fix link to rust-nostr

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -117,7 +117,7 @@ the project is in the early stages of development, [over 35
 NIPs](https://github.com/rust-nostr/nostr/tree/master/crates/nostr#supported-nips)
 are already supported, with more to come.
 
-Repository: [nostr-sdk/nostr-sdk-ios](https://github.com/nostr-sdk/nostr-sdk-ios)  
+Repository: [rust-nostr/nostr](https://github.com/rust-nostr/nostr)
 License: MIT
 
 ### Nostr Relay NestJS
