--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -11,7 +11,7 @@ summary: "OpenSats is funding over a dozen open-source projects in the nostr eco
 The [mission] of OpenSats is to support and maintain a sustainable ecosystem of
 funding for free and open-source projects that help Bitcoin flourish. Nostr is
 such a project, which is why OpenSats introduced The Nostr Fund and [built a
-team around the protocols originator][startsmall] to help fund the growing nostr
+team around the protocol's originator][startsmall] to help fund the growing nostr
 ecosystem.  As an open, interoperable, and censorship-resistant protocol, nostr
 has the chance of doing social-native networking right.
 
