--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -247,8 +247,8 @@ License: Public Domain, Creative Commons
 ---
 
 We have received hundreds of applications in the last couple of weeks, many
-related to or exclusively focused on nostr. Most applications focus on bitcoin
-and lightning, and we will announce grants for these projects soon.
+related to or exclusively focused on nostr. Most projects that applied focus on
+bitcoin and lightning. We will announce another wave of grants for these soon.
 
 To all the nostr projects that applied and didn't make the cut this time around:
 don't be discouraged. Please [apply for funding][apply] again in the future. We
