audio -> audio files

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -195,8 +195,8 @@ License: MIT
 ### nostr.build
 
 [Nostr.build](https://nostr.build/) is a free-to-use media hosting service that
-allows users to upload images, gifs, videos, and audio to share them as nostr
-events. The team recently released their code under an MIT License so that
+allows users to upload images, gifs, videos, and audio files to share them as
+nostr events. The team recently released their code under an MIT License so that
 anyone might use the software to offer a similar service.
 
 Repository: [nostrbuild/nostr.build](https://github.com/nostrbuild/nostr.build)  
@@ -254,8 +254,7 @@ To all the nostr projects that applied and didn't make the cut this time around:
 don't be discouraged. Please [apply for funding][apply] again in the future. We
 will announce new grants and funding opportunities quarterly, and there is
 always the possibility of being listed on the OpenSats website to receive
-pass-through
-donations for your project.  
+pass-through donations for your project.  
 
 We are excited to support the projects above in building the tools we bitcoiners
 care so deeply about. The future is bright; we just have a lot of building to
