--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -231,8 +231,8 @@ License: MIT
 
 ### Nostr Design
 
-Nostr Design is a comprehensive resource for designers and developers to build
-successful nostr products. Nostr introduces several new concepts that most
+Nostr Design will be a comprehensive resource for designers and developers to
+build successful nostr products. Nostr introduces several new concepts that most
 people are not familiar with. Given its nature, the protocol presents some
 unique design challenges for developers and users alike. The Nostr Design
 efforts are led by [Karnage](https://karnage.webflow.io/), who has done stellar
