--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -50,12 +50,12 @@ Without further ado, let's take a closer look at each project in turn.
 ### NDK
 
 NDK is a nostr development kit that makes the experience of building
-Nostr-related applications, whether they are relays, clients, or anything in
-between, better, more reliable, and overall nicer to work with than existing
-solutions. The core goal of NDK is to improve the decentralization of Nostr via
-intelligent conventions and data discovery features without depending on any one
-central point of coordination, such as large relays or centralized search
-providers.
+Nostr-related applications—whether they are relays, clients, or anything in
+between—better, more reliable, and overall more enjoyable to work with than
+existing solutions. The core goal of NDK is to improve the decentralization of
+Nostr via intelligent conventions and data discovery features without depending
+on any one central point of coordination, such as large relays or centralized
+search providers.
 
 Repository: [nostr-dev-kit/ndk](https://github.com/nostr-dev-kit/ndk)  
 License: MIT
