Re-word Habla paragraph

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -62,11 +62,11 @@ License: MIT
 
 ### Habla
 
-[Habla](https://habla.news/) is a website for reading, writing, curating, and
-monetizing long-form content on nostr. It uses NIP-23 to allow markdown
-formatting on articles, which can embed any nostr content such as notes,
-profiles, lists, relays, badges, and more. The goal of Habla is to give everyone
-an alternative to centralized publishing platforms such as Medium or Substack,
+[Habla.news](https://habla.news/) is a website for reading, writing, curating,
+and monetizing long-form content on nostr. It uses NIP-23 to allow
+markdown-formatted articles and embedded nostr content such as notes, profiles,
+lists, relays, badges, and more. The goal of Habla is to give everyone an
+alternative to centralized publishing platforms such as Medium or Substack,
 which are by their very nature prone to censorship and deplatforming.
 
 Repository: [verbiricha/habla.news](https://github.com/verbiricha/habla.news)  
