Fix repetition in Iris paragraph

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -89,7 +89,7 @@ License: MIT
 [Iris](https://iris.to/) is a multi-platform nostr client that is available for
 web, mobile, and desktop. Iris' design goals are speed, reliability, and ease of
 use. The client features public as well as private messaging, customizable
-feeds, as well as an offline mode, and speedy account creation.
+feeds, an offline mode, and speedy account creation.
 
 Repository: [irislib/iris-messenger](https://github.com/irislib/iris-messenger)  
 License: MIT
