habla.news -> habla

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -62,7 +62,7 @@ License: MIT
 
 ### Habla
 
-[Habla.news](https://habla.news/) is a website for reading, writing, curating,
+[Habla](https://habla.news/) is a website for reading, writing, curating,
 and monetizing long-form content on nostr. It uses NIP-23 to allow
 markdown-formatted articles and embedded nostr content such as notes, profiles,
 lists, relays, badges, and more. The goal of Habla is to give everyone an
