Re-word Soapbox paragraph

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -131,15 +131,13 @@ License: MIT
 
 ### Soapbox
 
-[Soapbox](https://soapbox.pub/) is an open-source software suite that makes
-decentralized social media accessible to everyone through a focus on design,
-user experience, and the growth of the network. Soapbox started out as an
-alternative to Mastodon but has grown to encompass ActivityPub and nostr while
-being interoperable with both. In February 2023, the team launched the "Mostr"
-bridge, seamlessly connecting Nostr to the ActivityPub Fediverse and enabling
-bidirectional communication between both protocols. This bridge exposes over
-9.4M potential users in Nostr's target audience to Nostr, many of whom have
-already left the Fediverse completely in favor of Nostr.
+[Soapbox](https://soapbox.pub/) started out as an alternative to Mastodon but
+has grown to encompass ActivityPub and nostr while being interoperable with
+both. In February 2023, the team launched the "Mostr" bridge, seamlessly
+connecting nostr to the ActivityPub Fediverse and enabling bidirectional
+communication between both protocols. This bridge exposes over 9.4M potential
+users in nostr's target audience to nostr, many of whom have already left the
+Fediverse completely in favor of nostr.
 
 Repository: [gitlab.com/soapbox-pub](https://gitlab.com/soapbox-pub)  
 License: GNU Affero General Public License v3.0
