--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -176,7 +176,7 @@ follow hashtags, and other novel features. You can install
 [F-Droid](https://f-droid.org/packages/com.vitorpamplona.amethyst/) or [Google
 Play](https://play.google.com/store/apps/details?id=com.vitorpamplona.amethyst).
 
-Repository: [vitorpamplona/amethyst/](https://github.com/vitorpamplona/amethyst/)  
+Repository: [vitorpamplona/amethyst](https://github.com/vitorpamplona/amethyst/)  
 License: MIT
 
 ### Pinstr
