Re-word Pinstr paragraph

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -182,10 +182,9 @@ License: MIT
 ### Pinstr
 
 [Pinstr](https://pinstr.app/) allows users to easily organize and discover new
-ideas by creating public boards full of pins. Users can star, comment, and zap
-other users' boards. Users can find curated boards of other users or create
-boards themselves. Default boards include other users' bookmarked content, among
-other things.
+ideas by creating public boards of pins. Users can star, comment, and zap other
+users' boards. Users can find curated boards of other users and create boards
+themselves. Default boards include users' bookmarked content, among other lists.
 
 Repository: [sepehr-safari/pinstr](https://github.com/sepehr-safari/pinstr)  
 License: MIT
