Add summary for /apply

--- a/data/pages/apply.mdx
+++ b/data/pages/apply.mdx
@@ -1,6 +1,6 @@
 ---
 title: Apply for Funding
-summary: "TODO"
+summary: "Apply for an OpenSats Grant"
 image: /static/images/avatar.png
 layout: PageLayout
 ---
