Fix link to 1st blog post

--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -260,4 +260,4 @@ do.
 [apply]: /apply
 [nostr-fund]: /projects/nostr
 [mission]: /mission
-[startsmall]: /blog/%20opensats-receives-additional-funding-of-dollar10m-from-startsmall
+[startsmall]: /blog/opensats-receives-additional-funding-of-dollar10m-from-startsmall
