--- a/data/blog/nostr-grants-july-2023.mdx
+++ b/data/blog/nostr-grants-july-2023.mdx
@@ -27,7 +27,7 @@ In no particular order, here they are:
 - Coracle by [@hodlbod](https://nostr.com/npub1jlrs53pkdfjnts29kveljul2sm0actt6n8dxrrzqcersttvcuv3qdjynqn)
 - Iris by [@mmalmi](https://nostr.com/npub1g53mukxnjkcmr94fhryzkqutdz2ukq4ks0gvy5af25rgmwsl4ngq43drvk)
 - Damus by [@jb55](https://nostr.com/npub1xtscya34g58tk0z605fvr788k263gsu6cy9x0mhnm87echrgufzsevkk5s)
-- rust-nostr & nostr-sdk by [@yukibtc](http://npub1drvpzev3syqt0kjrls50050uzf25gehpz9vgdw08hvex7e0vgfeq0eseet)
+- rust-nostr & nostr-sdk by [@yukibtc](https://nostr.com/npub1drvpzev3syqt0kjrls50050uzf25gehpz9vgdw08hvex7e0vgfeq0eseet)
 - Nostr Relay NestJS by [@CodyTseng](https://nostr.com/npub1syjmjy0dp62dhccq3g97fr87tngvpvzey08llyt6ul58m2zqpzps9wf6wl)
 - Soapbox by [@alexgleason](https://nostr.com/npub108pv4cg5ag52nq082kd5leu9ffrn2gdg6g4xdwatn73y36uzplmq9uyev6)
 - Code Collaboration over Nostr by [@DanConwayDev](https://nostr.com/npub15qydau2hjma6ngxkl2cyar74wzyjshvl65za5k5rl69264ar2exs5cyejr)
