--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -14,8 +14,8 @@ and similar bitcoin infrastructure engineers, we aim to support a multitude of
 open-source projects that are aligned with our mission.
 
 We are delighted to announce grants for over a dozen projects in the bitcoin &
-lightning ecosystem. The following projects were selected by the OpenSats board
-according to our [grant selection
+lightning ecosystem. The following open-source projects were selected by the
+OpenSats board according to our [grant selection
 process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md):
 
 - [Payjoin Dev Kit](https://github.com/payjoin)
@@ -31,8 +31,30 @@ process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md
 - [lnproxy](https://github.com/lnproxy/lnproxy)
 - [Blixt Wallet](https://github.com/hsjoberg/blixt-wallet)
 
-While many bitcoiners will probably know most of these projects, let's take a
-closer look at each of them in turn:
+In addition to the open-source projects listed above, we funded three
+educational efforts: [Bitcoin Education in
+Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson),
+21 Ideas, and one of the upcoming CoreDev Events.
+
+The first is an initiative started and led by Apata Johnson. Apata's project
+aims to educate youths on bitcoin and the opportunities it brings for the people
+living in the rural areas of Nigeria.
+
+The second, [21 Ideas](https://www.21ideas.org/), is a project that aims to
+bring quality Bitcoin education to Russian citizens. Tony and others have been
+working for many years on translations, original material, and hands-on
+tutorials for beginners. We believe that education is paramount to proper
+Bitcoin use, and localization is paramount for everyday citizens to properly
+grasp the importance as well as the novel concepts of bitcoin.
+
+Last but not least, we provide financial support for one of the upcoming
+[CoreDev](https://coredev.tech/) developer events, which is all about bringing
+developers together so that they can hack on Bitcoin Core and related software.
+
+Now let's take a closer look at the projects to better understand what the
+purpose and goal of each is.
+
+---
 
 ### Payjoin Dev Kit
 
@@ -47,7 +69,7 @@ payjoin support in their software. Payjoin Dev Kit makes it easy to integrate
 BIP 78 standard payjoin everywhere, having working reference integrations for
 Bitcoin Core, LND, and BDK.
 
-Repository: [github.com/payjoin](https://github.com/payjoin)
+Repository: [github.com/payjoin](https://github.com/payjoin)  
 License: MIT
 
 ### Bolt12 for LND
@@ -62,7 +84,7 @@ Consequently, Bolt12 makes it much easier to receive and send payments without
 any third-party infrastructure in a native-lightning way. Static invoices make
 donations and recurring payments much easier.
 
-Repository: [lightningnetwork/lnd](https://github.com/lightningnetwork/lnd)
+Repository: [lightningnetwork/lnd](https://github.com/lightningnetwork/lnd)  
 License: MIT
 
 ### Splicing
@@ -75,7 +97,7 @@ important step towards maturing the Lightning network and enabling the
 onboarding of millions, and ultimately billions, of people.
 
 Repository:
-[ddustin/splice](https://github.com/ddustin/lightning/tree/ddustin/splice)
+[ddustin/splice](https://github.com/ddustin/lightning/tree/ddustin/splice)  
 License: BSD-MIT
 
 ### Raspiblitz
@@ -92,7 +114,7 @@ the German Bitcoin space. Since then, it has grown to over 150 contributors and
 its plugin system and sports advanced features like touchscreen support, channel
 autopilot, backup systems, DynDNS, SSH tunneling, and more.
 
-Repository: [raspiblitz/raspiblitz](https://github.com/raspiblitz/raspiblitz)
+Repository: [raspiblitz/raspiblitz](https://github.com/raspiblitz/raspiblitz)  
 License: MIT
 
 ### Labelbase
@@ -109,7 +131,7 @@ across wallets and other tools. By providing a unified label management
 interface, Labelbase enhances the user experience, improves privacy, and
 promotes better organization and understanding of Bitcoin transactions.
 
-Repository: [Labelbase/Labelbase](https://github.com/Labelbase/Labelbase)
+Repository: [Labelbase/Labelbase](https://github.com/Labelbase/Labelbase)  
 License: MIT
 
 ### BTCPay Server
@@ -126,7 +148,7 @@ software also takes care of payment refunding and bitcoin management alongside
 many other features.
 
 Repository:
-[btcpayserver/btcpayserver](https://github.com/btcpayserver/btcpayserver)
+[btcpayserver/btcpayserver](https://github.com/btcpayserver/btcpayserver)  
 License: MIT
 
 ### ZeroSync
@@ -138,7 +160,7 @@ to validate the entire history of transactions and everyone's current balances.
 The first application is to "zerosync" Bitcoin Core in pruned mode. The
 long-term vision for ZeroSync is to become a toolbox for custom Bitcoin proofs.
 
-Repository: [zerosync/zerosync](https://github.com/zerosync/zerosync)
+Repository: [zerosync/zerosync](https://github.com/zerosync/zerosync)  
 License: MIT
 
 ### Mutiny Wallet
@@ -156,7 +178,7 @@ marketplace. The team's goal is to provide users with a seamless experience,
 combining the power of Bitcoin and Lightning with social media in a way that
 matches the Bitcoin ethos.
 
-Repository: [MutinyWallet](https://github.com/MutinyWallet)
+Repository: [MutinyWallet](https://github.com/MutinyWallet)  
 License: MIT
 
 ### next-auth Lightning Provider
@@ -169,7 +191,7 @@ plug-and-play Provider for Lightning makes integration easier and more
 attractive for developers.
 
 Repository:
-[jowo-io/next-auth-lightning-provider](https://github.com/jowo-io/next-auth-lightning-provider)
+[jowo-io/next-auth-lightning-provider](https://github.com/jowo-io/next-auth-lightning-provider)  
 License: ISC
 
 ### Cashu
@@ -184,7 +206,7 @@ Payments are executed without anyone able to censor specific users. There are
 multiple implementations of the Cashu protocol. Popular open-source wallets are
 Cashu Nutshell, Cashu.me, and Nutstash.
 
-Repository: [cashubtc/cashu](https://github.com/cashubtc/cashu)
+Repository: [cashubtc/cashu](https://github.com/cashubtc/cashu)  
 License: MIT
 
 ### lnproxy
@@ -196,7 +218,7 @@ providing privacy for users without taking custody of their funds. The project
 encompasses an LNURL-style protocol specification and a collection of
 open-source implementations of lnproxy clients and a relay.
 
-Repository: [lnproxy/lnproxy](https://github.com/lnproxy/lnproxy)
+Repository: [lnproxy/lnproxy](https://github.com/lnproxy/lnproxy)  
 License: GPL 3.0 & MIT
 
 ### Blixt Wallet
@@ -210,24 +232,10 @@ your privacy. The wallet does not use any centralized servers for doing
 transactions. Channels are opened automatically on the user's behalf, making it
 easy to get up and running on Lightning.
 
-Repository: [hsjoberg/blixt-wallet](https://github.com/hsjoberg/blixt-wallet)
+Repository: [hsjoberg/blixt-wallet](https://github.com/hsjoberg/blixt-wallet)  
 License: MIT
 
-In addition to the open-source projects above, we funded three educational
-efforts: [Bitcoin Education in
-Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson),
-21 Ideas, and one of the upcoming CoreDev Events. The first is an initiative
-started and led by Apata Johnson. Apata's project aims to educate youths on
-bitcoin and the opportunities it brings for the people living in the rural areas
-of Nigeria. The second, [21 Ideas](https://www.21ideas.org/), is a project that
-aims to bring quality Bitcoin education to Russian citizens. Tony and others
-have been working for many years on translations, original material, and
-hands-on tutorials for beginners. We believe that education is paramount to
-proper Bitcoin use, and localization is paramount for everyday citizens to
-properly grasp the importance as well as the novel concepts of bitcoin. Last but
-not least, we provide financial support for one of the upcoming
-[CoreDev](https://coredev.tech/) developer events, which is all about bringing
-developers together so that they can hack on Bitcoin Core and related projects.
+---
 
 We received a large number of applications in the last couple of months.
 Unfortunately, we were unable to fund all of the proposals that were sent to us
