--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -237,6 +237,11 @@ License: MIT
 
 ---
 
+All of the projects above are funded by contributions to the Bitcoin General
+Fund. Our grant programs are made possible by generous donors like you. If you
+want to help fund the Bitcoin ecosystem, please [donate to the Bitcoin General
+Fund](https://opensats.org/projects/general_fund).
+
 We received a large number of applications in the last couple of months.
 Unfortunately, we were unable to fund all of the proposals that were sent to us
 last quarter. Please don't hesitate to apply again in case your application was
@@ -244,15 +249,9 @@ rejected this time around. The applicant pool was very competitive, which is a
 great thing to see in and of itself.
 
 Our team is screening applications constantly, and we will announce new grants
-and funding opportunities quarterly or as they arise. If you are working on an
-open-source project in and around bitcoin, and you think your work is aligned
-with the OpenSats mission, please apply for funding on our website:
-[opensats.org/apply](https://opensats.org/apply)
-
-All of the projects above are funded by contributions to the Bitcoin General
-Fund. Our grant programs are made possible by generous donors like you. If you
-want to help fund the Bitcoin ecosystem, please [donate to the Bitcoin General
-Fund](https://opensats.org/projects/general_fund).
+and funding opportunities as they arise. If you are working on an open-source
+project in and around bitcoin, and you think your work is aligned with the
+OpenSats mission, please [apply for funding](https://opensats.org/apply).
 
 "The computer can be used as a tool to liberate and protect people, rather than
 to control them," as [Hal
