--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -8,15 +8,23 @@ images: ['/static/images/blog/04-bitcoin.jpg']
 summary: "OpenSats is funding over a dozen open-source projects in the bitcoin ecosystem."
 ---
 
-In addition to offering [long-term support for core
-devs](https://opensats.org/blog/announcing-lts-grant-program-to-support-bitcoin-core-contributors)
-and similar bitcoin infrastructure engineers, we aim to support a multitude of
-open-source projects that are aligned with our mission.
+"The computer can be used as a tool to liberate and protect people, rather than
+to control them," as Hal Finney wrote so presciently 30 years ago.[^fn-hal]
 
-We are delighted to announce grants for over a dozen projects in the bitcoin &
-lightning ecosystem. The following open-source projects were selected by the
-OpenSats board according to our [grant selection
-process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md):
+The goal of OpenSats is to help build the tools that
+Hal alluded to. Tools that liberate and protect, rather than systems that
+control and oppress. Many tools still have to be built. Many tools still need to
+be improved. However, "the universe smiles on encryption," as Assange so aptly
+put it.[^fn-assange] We believe that freedom tech is what carries this smile forward,
+which is why we are delighted to announce grants for over a dozen projects in the bitcoin &
+lightning ecosystem.
+
+[^fn-hal]: Hal Finney: [_Why remailers..._](https://cypherpunks.venona.com/date/1992/11/msg00108.html) (November 1992)
+
+[^fn-assange]: Julian Assange: [_A Call to Cryptographic Arms_](https://cryptome.org/2012/12/assange-crypto-arms.htm) (October 2012)
+
+The following open-source projects were [selected](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md) to by the
+OpenSats board for funding:
 
 - [Payjoin Dev Kit](https://github.com/payjoin)
 - [Bolt12 for LND](https://github.com/ziggie1984)
@@ -31,10 +39,12 @@ process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md
 - [lnproxy](https://github.com/lnproxy/lnproxy)
 - [Blixt Wallet](https://github.com/hsjoberg/blixt-wallet)
 
-In addition to the open-source projects listed above, we funded three
-educational efforts: [Bitcoin Education in
-Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson),
-21 Ideas, and one of the upcoming CoreDev Events.
+In addition to the open-source projects listed above, three
+educational initiatives were selected:
+
+- [Bitcoin Education in Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson)
+- 21 Ideas
+- CoreDev.tech
 
 The first is an initiative started and led by Apata Johnson. Apata's project
 aims to educate youths on bitcoin and the opportunities it brings for the people
@@ -243,23 +253,12 @@ want to help fund the Bitcoin ecosystem, please [donate to the Bitcoin General
 Fund](https://opensats.org/projects/general_fund).
 
 We received a large number of applications in the last couple of months.
-Unfortunately, we were unable to fund all of the proposals that were sent to us
-last quarter. Please don't hesitate to apply again in case your application was
-rejected this time around. The applicant pool was very competitive, which is a
-great thing to see in and of itself.
+Unfortunately, we were unable to fund all of the proposals that were sent to us.
+Please don't hesitate to apply again in case your application was rejected this
+time around. The applicant pool was very competitive, which is a great thing to
+see in and of itself.
 
 Our team is screening applications constantly, and we will announce new grants
 and funding opportunities as they arise. If you are working on an open-source
 project in and around bitcoin, and you think your work is aligned with the
 OpenSats mission, please [apply for funding](https://opensats.org/apply).
-
-"The computer can be used as a tool to liberate and protect people, rather than
-to control them," as [Hal
-Finney](https://cypherpunks.venona.com/date/1992/11/msg00108.html) wrote so
-presciently 30 years ago. The goal of OpenSats is to help build the tools that
-Hal alluded to. Tools that liberate and protect, rather than systems that
-control and oppress. Many tools still have to be built. Many tools still need to
-be improved. However, "the universe smiles on encryption," as Assange so aptly
-put it. We believe that freedom tech is what carries this smile forward,
-brightening our collective future while elevating the sovereignty of the
-individual.
