Add links to educational projects; re-word segue

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -43,14 +43,14 @@ In addition to the open-source projects listed above, three
 educational initiatives were selected:
 
 - [Bitcoin Education in Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson)
-- 21 Ideas
-- CoreDev.tech
+- [21 Ideas](https://www.21ideas.org/)
+- [CoreDev.tech](https://coredev.tech/)
 
 The first is an initiative started and led by Apata Johnson. Apata's project
 aims to educate youths on bitcoin and the opportunities it brings for the people
 living in the rural areas of Nigeria.
 
-The second, [21 Ideas](https://www.21ideas.org/), is a project that aims to
+The second, 21 Ideas, is a project that aims to
 bring quality Bitcoin education to Russian citizens. Tony and others have been
 working for many years on translations, original material, and hands-on
 tutorials for beginners. We believe that education is paramount to proper
@@ -58,11 +58,11 @@ Bitcoin use, and localization is paramount for everyday citizens to properly
 grasp the importance as well as the novel concepts of bitcoin.
 
 Last but not least, we provide financial support for one of the upcoming
-[CoreDev](https://coredev.tech/) developer events, which is all about bringing
+CoreDev developer events, which is all about bringing
 developers together so that they can hack on Bitcoin Core and related software.
 
-Now let's take a closer look at the projects to better understand what the
-purpose and goal of each is.
+With that out of the way, let's take a closer look at the free and open-source
+software projects of this funding round.
 
 ---
 
