--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -5,7 +5,7 @@ tags: ['OpenSats', 'grants', 'bitcoin']
 draft: false
 authors: ['dergigi']
 images: ['/static/images/blog/04-bitcoin.jpg']
-summary: "OpenSats is funding over a dozen open-source projects in the bitcoin ecosystem."
+summary: "OpenSats is funding over a dozen projects in the bitcoin & lightning ecosystem."
 ---
 
 "The computer can be used as a tool to liberate and protect people, rather than
