Split into two paragraphs

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -11,12 +11,13 @@ summary: "OpenSats is funding over a dozen projects in the bitcoin & lightning e
 "The computer can be used as a tool to liberate and protect people, rather than
 to control them," as Hal Finney wrote so presciently 30 years ago.[^fn-hal]
 
-The goal of OpenSats is to help build the tools that
-Hal alluded to. Tools that liberate and protect, rather than systems that
-control and oppress. Many tools still have to be built. Many tools still need to
-be improved. However, "the universe smiles on encryption," as Assange so aptly
-put it.[^fn-assange] We believe that freedom tech is what carries this smile forward,
-which is why we are delighted to announce grants for over a dozen projects in the bitcoin &
+The goal of OpenSats is to help build the tools that Hal alluded to. Tools that
+liberate and protect, rather than systems that control and oppress. Many tools
+still have to be built. Many tools still need to be improved. However, "the
+universe smiles on encryption," as Assange so aptly put it.[^fn-assange]
+
+We believe that freedom tech is what carries this smile forward, which is why we
+are delighted to announce grants for over a dozen projects in the bitcoin &
 lightning ecosystem.
 
 [^fn-hal]: Hal Finney: [_Why remailers..._](https://cypherpunks.venona.com/date/1992/11/msg00108.html) (November 1992)
