--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -40,28 +40,6 @@ OpenSats board for funding:
 - [lnproxy](https://github.com/lnproxy/lnproxy)
 - [Blixt Wallet](https://github.com/hsjoberg/blixt-wallet)
 
-In addition to the open-source projects listed above, three
-educational initiatives were selected:
-
-- [Bitcoin Education in Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson)
-- [21 Ideas](https://www.21ideas.org/)
-- [CoreDev.tech](https://coredev.tech/)
-
-The first is an initiative started and led by Apata Johnson. Apata's project
-aims to educate youths on bitcoin and the opportunities it brings for the people
-living in the rural areas of Nigeria.
-
-The second, 21 Ideas, is a project that aims to
-bring quality Bitcoin education to Russian citizens. Tony and others have been
-working for many years on translations, original material, and hands-on
-tutorials for beginners. We believe that education is paramount to proper
-Bitcoin use, and localization is paramount for everyday citizens to properly
-grasp the importance as well as the novel concepts of bitcoin.
-
-Last but not least, we provide financial support for one of the upcoming
-CoreDev developer events, which is all about bringing
-developers together so that they can hack on Bitcoin Core and related software.
-
 With that out of the way, let's take a closer look at the free and open-source
 software projects of this funding round.
 
@@ -248,10 +226,19 @@ License: MIT
 
 ---
 
-All of the projects above are funded by contributions to the Bitcoin General
-Fund. Our grant programs are made possible by generous donors like you. If you
-want to help fund the Bitcoin ecosystem, please [donate to the Bitcoin General
-Fund](https://opensats.org/projects/general_fund).
+In addition to the software projects listed above, three educational initiatives
+were selected for funding:
+
+- [Bitcoin Education in Nigeria](https://geyser.fund/project/bitcoineducationinnigeriawithapatajohnson) - is an initiative started and led by Apata Johnson. Apata's project aims to educate youths on bitcoin and the opportunities it brings for the people living in the rural areas of Nigeria.
+- [21 Ideas](https://www.21ideas.org/) is a project that aims to bring quality Bitcoin education to Russian citizens. Tony and others have been working for many years on translations, original material, and hands-on tutorials for beginners. We believe that education is paramount to proper Bitcoin use, and localization is paramount for everyday citizens to properly grasp the importance as well as the novel concepts of bitcoin.
+- [CoreDev.tech](https://coredev.tech/) is organizing recurring developer events, which are all about bringing devs together so that they can hack on Bitcoin Core and related software.
+
+---
+
+All grants were and are funded by contributions to the Bitcoin General Fund. Our
+operations as well as our grant programs are made possible by generous donors
+like you. If you want to help fund the Bitcoin ecosystem, please [donate to the
+Bitcoin General Fund](https://opensats.org/projects/general_fund).
 
 We received a large number of applications in the last couple of months.
 Unfortunately, we were unable to fund all of the proposals that were sent to us.
