Link bullets to project paragraphs, not GitHub

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -27,18 +27,18 @@ lightning ecosystem.
 The following open-source projects were [selected](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md) to by the
 OpenSats board for funding:
 
-- [Payjoin Dev Kit](https://github.com/payjoin)
-- [Bolt12 for LND](https://github.com/ziggie1984)
-- [Splicing](https://lightningsplice.com/)
-- [Raspiblitz](https://github.com/raspiblitz/raspiblitz)
-- [Labelbase](https://github.com/Labelbase/Labelbase)
-- [BTCPay Server](https://github.com/btcpayserver)
-- [ZeroSync](https://github.com/zerosync/zerosync)
-- [Mutiny Wallet](https://github.com/MutinyWallet)
-- [next-auth Lightning Provider](https://github.com/jowo-io/next-auth-lightning-provider)
-- [Cashu](https://github.com/cashubtc/cashu)
-- [lnproxy](https://github.com/lnproxy/lnproxy)
-- [Blixt Wallet](https://github.com/hsjoberg/blixt-wallet)
+- [Payjoin Dev Kit](#payjoin-dev-kit)
+- [Bolt12 for LND](#bolt12-for-lnd)
+- [Splicing](#splicing)
+- [Raspiblitz](#raspiblitz)
+- [Labelbase](#labelbase)
+- [BTCPay Server](#btcpay-server)
+- [ZeroSync](#zerosync)
+- [Mutiny Wallet](#mutiny-wallet)
+- [next-auth Lightning Provider](#next-auth-lightning-provider)
+- [Cashu](#cashu)
+- [lnproxy](#lnproxy)
+- [Blixt Wallet](#blixt-wallet)
 
 With that out of the way, let's take a closer look at the free and open-source
 software projects of this funding round.
