Fix typo, remove link

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -24,8 +24,8 @@ lightning ecosystem.
 
 [^fn-assange]: Julian Assange: [_A Call to Cryptographic Arms_](https://cryptome.org/2012/12/assange-crypto-arms.htm) (October 2012)
 
-The following open-source projects were [selected](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md) to by the
-OpenSats board for funding:
+The following open-source projects were selected by the OpenSats board for
+funding:
 
 - [Payjoin Dev Kit](#payjoin-dev-kit)
 - [Bolt12 for LND](#bolt12-for-lnd)
