Re-word segue, link to /mission

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -40,8 +40,8 @@ funding:
 - [lnproxy](#lnproxy)
 - [Blixt Wallet](#blixt-wallet)
 
-With that out of the way, let's take a closer look at the free and open-source
-software projects of this funding round.
+Let's take a closer at each to understand their goal and how it aligns with the
+[OpenSats mission](/mission).
 
 ---
 
