Re-word, add link to BIP78

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -54,12 +54,14 @@ surveillance.
 
 Payjoin is easy to integrate and falls back to working defaults where it isn't
 supported, but it can only take off when senders and receivers include standard
-payjoin support in their software. Payjoin Dev Kit makes it easy to integrate
-BIP 78 standard payjoin everywhere, having working reference integrations for
-Bitcoin Core, LND, and BDK.
+payjoin support in their software. Payjoin Dev Kit makes it easy for wallet
+developers to integrate [BIP 78][bip78] standard payjoins everywhere, having
+working reference integrations for Bitcoin Core, LND, and BDK.
 
 Repository: [github.com/payjoin](https://github.com/payjoin)  
 License: MIT
+
+[bip78]: https://github.com/bitcoin/bips/blob/master/bip-0078.mediawiki
 
 ### Bolt12 for LND
 
