--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -214,9 +214,9 @@ License: GPL 3.0 & MIT
 
 ### Blixt Wallet
 
-Blixt is a non-custodial Lightning wallet for Android, iOS, and macOS with a
-focus on usability and user experience. The project's current target audience is
-bitcoiners who want to give Lightning a try.
+Blixt is a non-custodial wallet for bitcoiners who want to give Lightning a try.
+It runs on Android, iOS, and macOS, is easy to use, and straightforward to set
+up.
 
 Blixt uses LND and Neutrino under the hood, directly on the phone, respecting
 your privacy. The wallet does not use any centralized servers for doing
