Re-word Blixt once more

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -215,8 +215,8 @@ License: GPL 3.0 & MIT
 ### Blixt Wallet
 
 Blixt is a non-custodial wallet for bitcoiners who want to give Lightning a try.
-It runs on Android, iOS, and macOS, is easy to use, and straightforward to set
-up.
+It runs on Android, iOS, and macOS. It is easy to use and straightforward to set
+up, making it a user-friendly option to get started with Lightning.
 
 Blixt uses LND and Neutrino under the hood, directly on the phone, respecting
 your privacy. The wallet does not use any centralized servers for doing
