--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -237,16 +237,22 @@ were selected for funding:
 
 ---
 
-All grants were and are funded by contributions to the Bitcoin General Fund. Our
-operations as well as our grant programs are made possible by generous donors
-like you. If you want to help fund the Bitcoin ecosystem, please [donate to the
-Bitcoin General Fund](https://opensats.org/projects/general_fund).
+We received hundreds of applications in the last couple of months, which is a
+fantastic signal and something we are delighted about. Some applications are
+still being reviewed by the OpenSats board, as we try our best to assess
+feasibility, alignment, and potential impact of each project. We will announce
+additional grants as applications pass our [grant selection
+process](https://github.com/OpenSats/website/blob/master/docs/grant-selection.md).
 
-We received a large number of applications in the last couple of months.
 Unfortunately, we were unable to fund all of the proposals that were sent to us.
 Please don't hesitate to apply again in case your application was rejected this
 time around. The applicant pool was very competitive, which is a great thing to
 see in and of itself.
+
+Grants for the projects above are funded by contributions to the Bitcoin General
+Fund. Our operations as well as our grant programs are made possible by generous
+donors like you. If you want to help fund the Bitcoin ecosystem, please [donate
+to the Bitcoin General Fund](https://opensats.org/projects/general_fund).
 
 Our team is screening applications constantly, and we will announce new grants
 and funding opportunities as they arise. If you are working on an open-source
