Link to Bolt12 & Splicing pages

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -71,9 +71,9 @@ way without using a web server. It also uses Blinded Paths to disguise the
 destination of a node both when fetching the invoice and when paying. This
 improves privacy and, therefore, security for the receiver of the payment.
 
-Consequently, Bolt12 makes it much easier to receive and send payments without
-any third-party infrastructure in a native-lightning way. Static invoices make
-donations and recurring payments much easier.
+Consequently, [Bolt12](https://bolt12.org/) makes it much easier to receive and
+send payments without any third-party infrastructure in a native-lightning way.
+Static invoices make donations and recurring payments much easier.
 
 Repository: [lightningnetwork/lnd](https://github.com/lightningnetwork/lnd)  
 License: MIT
@@ -82,10 +82,11 @@ License: MIT
 
 Splicing is the ability to resize Lightning channels on-the-fly, giving users of
 the Lightning Network many additional benefits that were not intuitively obvious
-at first. Splicing scales Lightning by removing a fundamental limitation.
-Removing this limitation increases fungibility and lowers blockspace usage, an
-important step towards maturing the Lightning network and enabling the
-onboarding of millions, and ultimately billions, of people.
+at first. [Splicing](https://lightningsplice.com/) scales Lightning by removing
+a fundamental limitation.  Removing this limitation increases fungibility and
+lowers blockspace usage, an important step towards maturing the Lightning
+network and enabling the onboarding of millions, and ultimately billions, of
+people.
 
 Repository:
 [ddustin/splice](https://github.com/ddustin/lightning/tree/ddustin/splice)  
