Fix typo: missing word

--- a/data/blog/bitcoin-grants-july-2023.mdx
+++ b/data/blog/bitcoin-grants-july-2023.mdx
@@ -40,8 +40,8 @@ funding:
 - [lnproxy](#lnproxy)
 - [Blixt Wallet](#blixt-wallet)
 
-Let's take a closer at each to understand their goal and how it aligns with the
-[OpenSats mission](/mission).
+Let's take a closer look at each to understand their goal and how it aligns with
+the [OpenSats mission](/mission).
 
 ---
 
